--- a/ClearAsset/Controllers/TabBar/Add/SelectSubCategory/AddListingCell/AddListingTableViewCell.xib
+++ b/ClearAsset/Controllers/TabBar/Add/SelectSubCategory/AddListingCell/AddListingTableViewCell.xib
@@ -23,13 +23,13 @@
                         <rect key="frame" x="8" y="8" width="304" height="28"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="car" translatesAutoresizingMaskIntoConstraints="NO" id="qHz-w8-9s9">
-                                <rect key="frame" x="20" y="6" width="22.5" height="16"/>
+                                <rect key="frame" x="12" y="6" width="22.5" height="16"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="qHz-w8-9s9" secondAttribute="height" multiplier="21:15" id="uKv-GQ-s0W"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sub Category1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RTT-CY-ACM">
-                                <rect key="frame" x="59" y="4" width="112" height="20.5"/>
+                                <rect key="frame" x="51" y="4" width="112" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" name="appSubCategory"/>
                                 <nil key="highlightedColor"/>
@@ -39,9 +39,11 @@
                         <constraints>
                             <constraint firstItem="RTT-CY-ACM" firstAttribute="centerY" secondItem="g6V-dm-lNU" secondAttribute="centerY" id="06e-yK-gAk"/>
                             <constraint firstItem="qHz-w8-9s9" firstAttribute="width" secondItem="qHz-w8-9s9" secondAttribute="height" multiplier="21:15" id="9YW-Il-s4O"/>
-                            <constraint firstItem="qHz-w8-9s9" firstAttribute="leading" secondItem="g6V-dm-lNU" secondAttribute="leading" constant="20" id="IE7-cO-oTv"/>
+                            <constraint firstItem="qHz-w8-9s9" firstAttribute="top" secondItem="g6V-dm-lNU" secondAttribute="top" constant="6" id="Buh-Z0-rph"/>
+                            <constraint firstItem="qHz-w8-9s9" firstAttribute="leading" secondItem="g6V-dm-lNU" secondAttribute="leading" constant="12" id="IE7-cO-oTv"/>
                             <constraint firstItem="qHz-w8-9s9" firstAttribute="centerY" secondItem="g6V-dm-lNU" secondAttribute="centerY" id="UQ8-ZW-eCl"/>
                             <constraint firstItem="RTT-CY-ACM" firstAttribute="leading" secondItem="qHz-w8-9s9" secondAttribute="trailing" constant="16.5" id="hys-S8-Zv5"/>
+                            <constraint firstAttribute="bottom" secondItem="qHz-w8-9s9" secondAttribute="bottom" constant="6" id="pVN-D3-FFl"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -64,6 +66,10 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="subCategoryImageVIew" destination="qHz-w8-9s9" id="im7-SF-JhV"/>
+                <outlet property="subCategoryTitle" destination="RTT-CY-ACM" id="MrL-qi-TW2"/>
+            </connections>
             <point key="canvasLocation" x="139" y="141"/>
         </tableViewCell>
     </objects>
