--- a/ClearAsset/Controllers/Login/Login.storyboard
+++ b/ClearAsset/Controllers/Login/Login.storyboard
@@ -138,7 +138,7 @@
                                     <constraint firstAttribute="bottom" secondItem="FLh-N4-Leg" secondAttribute="bottom" constant="16" id="kjO-3K-Moi"/>
                                 </constraints>
                             </view>
-                            <view alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddr-Iy-9x4" userLabel="middleView">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ddr-Iy-9x4" userLabel="middleView">
                                 <rect key="frame" x="0.0" y="386.66666666666674" width="428" height="352"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjC-Vk-dC8">
@@ -251,6 +251,9 @@
                                         <state key="normal" title="No account? Sign up">
                                             <color key="titleColor" name="appBlue"/>
                                         </state>
+                                        <connections>
+                                            <action selector="didTapOnSignUpButton:" destination="sGk-Rg-27x" eventType="touchUpInside" id="y0F-RN-7fm"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -290,6 +293,7 @@
                         <outlet property="LoginButton" destination="IlG-HR-QlZ" id="lPJ-wt-EP1"/>
                         <outlet property="emailAddressTF" destination="Uge-q4-ORy" id="A81-2p-UX9"/>
                         <outlet property="passwordTF" destination="Sra-fM-hG7" id="0PS-ue-Sa8"/>
+                        <outlet property="signUpButton" destination="y2Y-K9-REO" id="sMw-sp-S7K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5E-n1-PHN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
