--- a/ClearAsset/Controllers/Splash/Splash.storyboard
+++ b/ClearAsset/Controllers/Splash/Splash.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="XOn-cz-T88">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="bv5-Zg-6KQ">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -16,28 +16,31 @@
                     <view key="view" contentMode="scaleToFill" id="Mbf-CJ-czM">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1lm-Ci-sqS" customClass="AnimationView">
-                                <rect key="frame" x="0.0" y="243.5" width="414" height="409"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="mua-SJ-cDt"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <constraints>
-                            <constraint firstItem="1lm-Ci-sqS" firstAttribute="height" secondItem="mua-SJ-cDt" secondAttribute="height" multiplier="0.5" id="8d6-8l-aS3"/>
-                            <constraint firstItem="1lm-Ci-sqS" firstAttribute="centerX" secondItem="Mbf-CJ-czM" secondAttribute="centerX" id="9tk-2a-5rR"/>
-                            <constraint firstItem="1lm-Ci-sqS" firstAttribute="centerY" secondItem="Mbf-CJ-czM" secondAttribute="centerY" id="RsT-LY-2Lj"/>
-                            <constraint firstItem="1lm-Ci-sqS" firstAttribute="width" secondItem="mua-SJ-cDt" secondAttribute="width" id="zwE-vt-Yhs"/>
-                        </constraints>
                     </view>
-                    <connections>
-                        <outlet property="animationView" destination="1lm-Ci-sqS" id="rgy-LM-NBK"/>
-                    </connections>
+                    <navigationItem key="navigationItem" id="R8m-cw-t0V"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BRK-lI-sUU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-317" y="177"/>
+            <point key="canvasLocation" x="592.75362318840587" y="176.78571428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hDU-jQ-OHh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="bv5-Zg-6KQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rhi-av-5cP">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="XOn-cz-T88" kind="relationship" relationship="rootViewController" id="uZ2-4X-asd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Evj-kc-DFi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-317.39130434782612" y="176.78571428571428"/>
         </scene>
     </scenes>
     <resources>
