--- a/ClearAsset/Controllers/TabBar/Add/AddListingDetail/CustomBottomSheet/BottomSheet.storyboard
+++ b/ClearAsset/Controllers/TabBar/Add/AddListingDetail/CustomBottomSheet/BottomSheet.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -18,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cvS-kR-NKY">
-                                <rect key="frame" x="16" y="646" width="382" height="250"/>
+                                <rect key="frame" x="16" y="746" width="382" height="150"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fPt-I8-WDB">
-                                        <rect key="frame" x="0.0" y="0.0" width="382" height="216"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="382" height="116"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2yv-DB-ioe">
                                                 <rect key="frame" x="20" y="16" width="33" height="32"/>
@@ -30,10 +31,10 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="OSk-GL-IsK">
-                                                <rect key="frame" x="8" y="58" width="366" height="150"/>
+                                                <rect key="frame" x="8" y="58" width="366" height="50"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="150" id="17O-x7-go6"/>
+                                                    <constraint firstAttribute="height" constant="50" id="17O-x7-go6"/>
                                                 </constraints>
                                                 <connections>
                                                     <outlet property="dataSource" destination="0BP-4x-TOS" id="maK-hn-XeM"/>
@@ -59,7 +60,7 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="250" id="3EA-NU-rsN"/>
+                                    <constraint firstAttribute="height" constant="150" id="3EA-NU-rsN"/>
                                     <constraint firstItem="fPt-I8-WDB" firstAttribute="leading" secondItem="cvS-kR-NKY" secondAttribute="leading" id="Rpp-0y-b8w"/>
                                     <constraint firstItem="fPt-I8-WDB" firstAttribute="top" secondItem="cvS-kR-NKY" secondAttribute="top" id="qf7-TO-tQX"/>
                                     <constraint firstAttribute="trailing" secondItem="fPt-I8-WDB" secondAttribute="trailing" id="sHL-Kv-vFL"/>
